Criando uma estrutura no html e adicionando reseet no css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,18 @@
     <title>Gorila vs 100 humanos</title>
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header>
+        <nav>
+            <a href="./index.html">Gorila vs 100 Humanos!</a>
+        </nav>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
