Criação das páginas "FAQ" e "integrantes"

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
     <header>
         <nav>
             <a href="./index.html">Gorila vs 100 Humanos!</a>
+            <a href="./assets/paginas/faq.html">FAQ</a>
+            <a href="./assets/paginas/integrantes.html">integrantes</a>
         </nav>
     </header>
 
     <main>
+
 
     </main>
 
