Adição de áudios para o projeto
Co-authored-by: Gustavo-Casimiro <Gustavo-Casimiro@users.noreply.github.com>
Co-authored-by: Milton Marcelino <MiltonMarcelino@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -14,11 +14,26 @@
             <a href="./assets/paginas/faq.html">FAQ</a>
             <a href="./assets/paginas/integrantes.html">integrantes</a>
         </nav>
+        <h1>1 Gorila vs 100 humanos!</h1>
     </header>
-
     <main>
+        <!-- Seção Gorila -->
+        <section>
+            <progress value="100" max="100" min="0" id="idVida"></progress>
+            <progress value="50" max="50" min="0" id="idEnergia"></progress>
+            <progress value="0" max="50" min="0" id="idDefesa"></progress>
+            <picture>
+                <figure>
+                    <img src="./assets/img/gorila.jpeg" alt="gorila">
+                    <figcaption>Gorila</figcaption>
+                </figure>
+            </picture>
 
-
+        </section>
+        <figure>
+                <img src="./assets/img/humano.png" alt="gorila">
+                <figcaption>Humano</figcaption>
+            </figure>
     </main>
 
     <footer>
