--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gorila vs Humanos</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./js/sript.js"></script>
+    <script src="./assets/js/script.js"></script>
 </head>
 <body>
     <header>
