--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gorila vs Humanos</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/script.js" defer></script>
 </head>
 <body>
     <header>
         <nav>
             <a href="./index.html">Gorila vs 100 Humanos!</a>
-            <a href="./assets/paginas/faq.html">FAQ</a>
-            <a href="./assets/paginas/integrantes.html">integrantes</a>
         </nav>
         <h1>🦍 Gorila vs 100 Humanos 🧑‍🤝‍🧑</h1>
         </nav>
