--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="./index.html">Gorila vs 100 Humanos!</a>
-            <a href="./assets/paginas/faq.html">FAQ</a>
-            <a href="./assets/paginas/integrantes.html">integrantes</a>
-        </nav>
         <h1>🦍 Gorila vs 100 Humanos 🧑‍🤝‍🧑</h1>
         </nav>
     </header>
@@ -54,7 +49,7 @@
                 </div>
             </section>
             <section class="animation">
-                <div class="imgs">
+                <div class="chars">
                     <picture>
                         <figure>
                             <img src="./assets/img/gorila.jpeg" alt="gorila">
