Renomeação do botão de cura para "Curar" e adição do script.js com elementos DOM.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="controls">
                     <button id="attack-btn" class="btn attack">Atacar (10 energia)</button>
                     <button id="defend-btn" class="btn defend">Defender (5 energia)</button>
-                    <button id="heal-btn" class="btn heal">Curar (15 energia)</button>
+                    <button id="health-btn" class="btn heal">Curar (15 energia)</button>
                     <button id="restart-btn" class="btn restart">Reiniciar Jogo</button>
                 </div>
                 
