Corrigindo todos os arquivos do projeto e voltando ao normal

--- a/index.html
+++ b/index.html
@@ -45,8 +45,11 @@
                     <!-- Status dos Humanos -->
                     <div class="humans-status">
                         <h2>Humanos</h2>
-                        <p>Restantes: <span id="humans-remaining">100</span>/100</p>
-                        <div class="humans-grid" id="humans-container"></div>
+                        <p>Força Total Restante: <span id="humans-remaining-text">100</span>/100</p>
+                        <!-- Área para mostrar imagens representativas dos grupos de humanos -->
+                        <div class="human-representatives-grid" id="human-representatives-container">
+                            <!-- 10 imagens de humanos serão geradas aqui pelo JS -->
+                        </div>
                     </div>
                 </div>
                 
