Link dos arquivos de som com o HTML

--- a/index.html
+++ b/index.html
@@ -79,13 +79,12 @@
     </footer>
 
     <!-- Elementos de Áudio (serão controlados pelo JS) -->
-    <audio id="sound-gorilla-attack" src="./assets/sounds/gorilla-attack.mp3" preload="auto"></audio>
-    <audio id="sound-gorilla-hurt" src="./assets/sounds/gorilla-hurt.mp3" preload="auto"></audio>
-    <audio id="sound-human-attack" src="./assets/sounds/human-attack.mp3" preload="auto"></audio>
-    <audio id="sound-human-die" src="./assets/sounds/human-die.mp3" preload="auto"></audio>
-    <audio id="sound-gorilla-defend" src="./assets/sounds/gorilla-defend.mp3" preload="auto"></audio>
-    <audio id="sound-gorilla-rest" src="./assets/sounds/gorilla-rest.mp3" preload="auto"></audio>
-    <audio id="sound-game-win" src="./assets/sounds/game-win.mp3" preload="auto"></audio>
-    <audio id="sound-game-lose" src="./assets/sounds/game-lose.mp3" preload="auto"></audio>
+    <audio id="sound-gorilla-attack" src="./assets/sounds/punch.mp3" preload="auto"></audio>
+    <audio id="sound-gorilla-defend" src="./assets/sounds/monkeSound.wav" preload="auto"></audio>
+    <audio id="sound-gorilla-rest" src="./assets/sounds/monkeSound.wav" preload="auto"></audio>
+    <audio id="sound-gorilla-hurt" src="./assets/sounds/monkeHurt.ogg" preload="auto"></audio>
+    <audio id="sound-human-attack" src="./assets/sounds/humanoAtaque.mp3" preload="auto"></audio>
+    <audio id="sound-human-die" src="./assets/sounds/dor.wav" preload="auto"></audio>
+    <audio id="'sound-game-win'" src="./assets/sounds/win.mp3" preload="auto"></audio>
 </body>
 </html>
